# wiog_v3

./: .gitignore  readme.md  start.sh
Actor_Pumpe_R01/: .cproject  .project  sdkconfig  sdkconfig.bk
Actor_Steckdose_R01/: .cproject  .project  sdkconfig
Sensor_AM2302_R1/: .cproject  .project  devices.txt  sdkconfig
Sensor_BME280_StepUp_R1/: .project  CMakeLists.txt  sdkconfig
Test/: .cproject
actor/: .cproject  .project  sdkconfig  sdkconfig.old
doc/: WIOG_Data:Struct.txt  mqtt_msg.txt
gateway/: .cproject  .project  CMakeLists.txt  run2pi.sh  sdkconfig  sdkconfig.old
sensor/: .project  CMakeLists.txt  sdkconfig  sdkconfig.old
sensor/main/: CMakeLists.txt  CMakeLists.txt.09073  CMakeLists.txt.24931.27963  CMakeLists.txt.bk  CMakeLists.txt.bk2  interface.h  sensor_main.c  wiog_include  wiog_sensor.c  wiog_sensor.h
sensor/main/gadget/bme280/: bme280_i2c_if.c  bme280_i2c_if.h
sensor/main/gadget/ubat/: ubat.c
sensor/main/ulp/: ds18b20.S
sensor/main/ulp/fsm_ds18b20/: ds18b20.S
sensor/main/ulp/riscv_bme280/: riscv_bme280_i2c_if.c
sensor/main/ulp/riscv_sht31/: riscv_sht31.c
sensorS2/: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
sensor_S2/: .cproject  sdkconfig  sdkconfig.old
sniffer/: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old  terminal.sh
ulp/: ds18b20.S  esp32s2_riscv_ds18b20.c  esp32s2_riscv_sht31.c
wiog_include/: wiog_actor.c  wiog_data.c  wiog_data.h  wiog_sensor.c  wiog_sensor.h  wiog_system.c  wiog_system.h  wiog_wifi.c  wiog_wifi.h  wiog_wifi_actor.c  wiog_wifi_actor.h  wiog_wifi_sensor.c  (+1 more)
(+120 files in other folders)
